--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <section id="aboutDetails">
         <div class="container">
             <h1 class="titleAnim">Marvel Cinematic Universe</h1>
-                <p>The Marvel Cinematic Universe (MCU) is an American media franchise and shared universe centered on a series of superhero films produced by Marvel Studios. The films are based on characters that appear in American comic books published by Marvel Comics. The franchise also includes television series, short films, digital series, and literature. The shared universe, much like the original Marvel Universe in comic books, was established by crossing over common plot elements, settings, cast, and characters.</p>
+                <p>The Marvel Cinematic Universe (MCU) is an American media franchise and shared universe centered on a series of superhero films produced by Marvel Studios. The films are based on characters that appear in American comic books published by Marvel Comics. The franchise also includes television series, short films, digital series, and literature. The shared universe, much like the original Marvel Universe in comic books, was established by crossing over common plot elements, settings, cast, and characters.<span style="color: aqua;font-size:13px;font-style:italic;">-Wikipidia</span></p>
         </div>
     </section>
     <!-- about mcu ends -->
 
     <!-- phases name tabs start -->
     <section id="mcuPhases">
-        <div class="container">
+        <div class="container"
             <h3>All Phases:</h3>
             <div class="tabs">
                 <div id="tab-1" class="tab-item tab-border">
