--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="mcuList">
                 <h3 id="spidys">Watch these movies first or before watching "Spider-Man: No way Home(2021)" if you have not watched them yet:</h3>
                 <ul class="spiderMan-films">
-                    <li><span>Spider-Man (2002)</span></li>
+                    <li><a href="https://drivebuzz.icu/file/1304673949" target="_blank" style="color:aqua;">Spider-Man (2002)</a></li>
                     <li><span>Spider-Man 2 (2004)</span></li>
                     <li><span>Spider-Man 3 (2007)</span></li>
                     <li><span>The Amazing Spider-Man (2012)</span></li>
